--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -243,6 +243,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#step 3 prepare data for tensorflow (tensors)\n",
+    "#tensors are a generic version of vectors and matrices\n",
+    "\n",
+    "#convert features to input tensor\n",
+    "inputX = dataframe.loc[:, ['area', 'bathrooms']].as_matrix()\n",
+    "#convert labels to input tensors\n",
+    "inputY = dataframe.loc[:, ['y1', 'y2']].as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2.10400000e+03,   3.00000000e+00],\n",
+       "       [  1.60000000e+03,   3.00000000e+00],\n",
+       "       [  2.40000000e+03,   3.00000000e+00],\n",
+       "       [  1.41600000e+03,   2.00000000e+00],\n",
+       "       [  3.00000000e+03,   4.00000000e+00],\n",
+       "       [  1.98500000e+03,   4.00000000e+00],\n",
+       "       [  1.53400000e+03,   3.00000000e+00],\n",
+       "       [  1.42700000e+03,   3.00000000e+00],\n",
+       "       [  1.38000000e+03,   3.00000000e+00],\n",
+       "       [  1.49400000e+03,   3.00000000e+00]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [0, 1],\n",
+       "       [0, 1],\n",
+       "       [1, 0],\n",
+       "       [0, 1],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#step 4 write out our hyperparameters\n",
+    "learning_rate = 0.000001\n",
+    "traning_epochs = 2000\n",
+    "display_steps = 50\n",
+    "n_samples = inputY.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#step 5 create out computation graph/neural network\n",
+    "x = tf.placeholder(tf.float32, [None, 2])\n",
+    "\n",
+    "#create 2X2 float matrix weights\n",
+    "#variables in tf holf and update parameters in memery buffers\n",
+    "W = tf.Variable(tf.zeros([2,2]))\n",
+    "\n",
+    "#add biases\n",
+    "b = tf.Variable(tf.zeros([2]))\n",
+    "\n",
+    "#multiply our weights by our inputs, first calculation\n",
+    "#weights are how we govern how data flows in out computation graph\n",
+    "#multiple input by weights and add bias\n",
+    "y_values = tf.add(tf.matmul(x,W), b)\n",
+    "\n",
+    "#apply softmax to value\n",
+    "y = tf.nn.softmax(y_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
