--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +359,151 @@
     "y_values = tf.add(tf.matmul(x,W), b)\n",
     "\n",
     "#apply softmax to value\n",
-    "y = tf.nn.softmax(y_values)"
+    "y = tf.nn.softmax(y_values)\n",
+    "\n",
+    "#feed in a matrix of labels\n",
+    "y_ = tf.placeholder(tf.float32, [None,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#step 6 perform training\n",
+    "cost = tf.reduce_sum(tf.pow(y_ - y, 2))/((2*n_samples))\n",
+    "\n",
+    "#gradient descent\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-23-6135bde4ac5d>:2 in <module>.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#initialize varibles and tensorflow session\n",
+    "init = tf.initialize_all_variables()\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training step: 0000 cost= 0.111773349\n",
+      "training step: 0050 cost= 0.109539941\n",
+      "training step: 0100 cost= 0.109539881\n",
+      "training step: 0150 cost= 0.109539807\n",
+      "training step: 0200 cost= 0.109539725\n",
+      "training step: 0250 cost= 0.109539665\n",
+      "training step: 0300 cost= 0.109539591\n",
+      "training step: 0350 cost= 0.109539531\n",
+      "training step: 0400 cost= 0.109539464\n",
+      "training step: 0450 cost= 0.109539390\n",
+      "training step: 0500 cost= 0.109539315\n",
+      "training step: 0550 cost= 0.109539248\n",
+      "training step: 0600 cost= 0.109539188\n",
+      "training step: 0650 cost= 0.109539114\n",
+      "training step: 0700 cost= 0.109539054\n",
+      "training step: 0750 cost= 0.109538987\n",
+      "training step: 0800 cost= 0.109538913\n",
+      "training step: 0850 cost= 0.109538853\n",
+      "training step: 0900 cost= 0.109538779\n",
+      "training step: 0950 cost= 0.109538697\n",
+      "training step: 1000 cost= 0.109538652\n",
+      "training step: 1050 cost= 0.109538570\n",
+      "training step: 1100 cost= 0.109538510\n",
+      "training step: 1150 cost= 0.109538436\n",
+      "training step: 1200 cost= 0.109538376\n",
+      "training step: 1250 cost= 0.109538302\n",
+      "training step: 1300 cost= 0.109538235\n",
+      "training step: 1350 cost= 0.109538160\n",
+      "training step: 1400 cost= 0.109538101\n",
+      "training step: 1450 cost= 0.109538034\n",
+      "training step: 1500 cost= 0.109537959\n",
+      "training step: 1550 cost= 0.109537899\n",
+      "training step: 1600 cost= 0.109537825\n",
+      "training step: 1650 cost= 0.109537765\n",
+      "training step: 1700 cost= 0.109537683\n",
+      "training step: 1750 cost= 0.109537624\n",
+      "training step: 1800 cost= 0.109537557\n",
+      "training step: 1850 cost= 0.109537482\n",
+      "training step: 1900 cost= 0.109537423\n",
+      "training step: 1950 cost= 0.109537341\n",
+      "Optimaization Finished!\n",
+      "Training cost= 0.109537 W= [[  2.14149521e-04  -2.14149870e-04]\n",
+      " [  5.13002669e-05  -5.13002451e-05]] b= [  1.19214146e-05  -1.19214246e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#training loop\n",
+    "for i in range(traning_epochs):\n",
+    "    sess.run(optimizer, feed_dict={x:inputX, y_: inputY})\n",
+    "    \n",
+    "    #write out logs of training\n",
+    "    if (i) % display_steps == 0:\n",
+    "        cc = sess.run(cost, feed_dict={x: inputX, y_ :inputY})\n",
+    "        print 'training step:', '%04d' % (i), \"cost=\", \"{:.9f}\".format(cc)\n",
+    "print \"Optimaization Finished!\"\n",
+    "training_cost = sess.run(cost, feed_dict={x: inputX, y_: inputY})\n",
+    "print \"Training cost=\", training_cost, \"W=\", sess.run(W), \"b=\", sess.run(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.71125221,  0.28874779],\n",
+       "       [ 0.66498977,  0.33501023],\n",
+       "       [ 0.73657656,  0.26342347],\n",
+       "       [ 0.64718789,  0.35281211],\n",
+       "       [ 0.78335613,  0.2166439 ],\n",
+       "       [ 0.70069474,  0.29930523],\n",
+       "       [ 0.65866327,  0.34133676],\n",
+       "       [ 0.64828628,  0.35171372],\n",
+       "       [ 0.64368278,  0.35631716],\n",
+       "       [ 0.65480119,  0.34519887]], dtype=float32)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(y,feed_dict = {x: inputX})"
    ]
   },
   {
